@@ -21,7 +21,6 @@
  * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
-import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.IOException;
 import java.util.Enumeration;
@@ -167,9 +166,6 @@ class ASAPInputStream extends InputStream
 
 public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListener
 {
-	private boolean useSmallStreams = false; // TODO: work in progress
-	private static final int SMALL_STREAM_BLOCKS = 16384;
-
 	private Command selectCommand;
 	private Command backCommand;
 	private Command stopCommand;
@@ -179,13 +175,8 @@ public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListene
 	private byte[] module;
 	private ASAP asap;
 	private Player player;
-	private Player nextPlayer;
 	private List songListControl;
 	private Gauge gauge;
-
-	public ASAPMIDlet()
-	{
-	}
 
 	private void displayFileList(FileList fileList)
 	{
@@ -217,19 +208,6 @@ public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListene
 		gauge.setValue(asap.getPosition());
 	}
 
-	private Player createSmallPlayer() throws IOException, MediaException
-	{
-		int len = asap.getModuleInfo().channels * SMALL_STREAM_BLOCKS;
-		byte[] wav = new byte[ASAP.WAV_HEADER_BYTES + len];
-		asap.getWavHeaderForPart(wav, ASAP.FORMAT_U8, SMALL_STREAM_BLOCKS);
-		len = asap.generate(wav, ASAP.WAV_HEADER_BYTES, len, ASAP.FORMAT_U8);
-		if (len == 0)
-			return null;
-		updatePosition();
-		InputStream is = new ByteArrayInputStream(wav, 0, ASAP.WAV_HEADER_BYTES + len);
-		return Manager.createPlayer(is, "audio/x-wav");
-	}
-
 	private void playSong(int song) throws IOException, MediaException
 	{
 		ASAP_ModuleInfo module_info = asap.getModuleInfo();
@@ -251,17 +229,8 @@ public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListene
 			duration = 180000;
 		gauge.setMaxValue(duration);
 		asap.playSong(song, duration);
-		if (useSmallStreams) {
-			player = createSmallPlayer();
-			player.realize();
-			nextPlayer = createSmallPlayer();
-			if (nextPlayer != null)
-				nextPlayer.realize();
-		}
-		else {
-			InputStream is = new ASAPInputStream(asap, this);
-			player = Manager.createPlayer(is, "audio/x-wav");
-		}
+		InputStream is = new ASAPInputStream(asap, this);
+		player = Manager.createPlayer(is, "audio/x-wav");
 		player.addPlayerListener(this);
 		player.start();
 	}
@@ -330,7 +299,6 @@ public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListene
 			Display.getDisplay(this).setCurrent(fileListControl);
 		}
 		else if (c == stopCommand) {
-			nextPlayer = null;
 			try {
 				player.stop();
 			} catch (MediaException ex) {
@@ -343,22 +311,8 @@ public class ASAPMIDlet extends MIDlet implements CommandListener, PlayerListene
 
 	public void playerUpdate(Player player, String event, Object eventData)
 	{
-		if (event == PlayerListener.END_OF_MEDIA) {
-			if (nextPlayer != null) {
-				player = nextPlayer;
-				player.addPlayerListener(this);
-				try {
-					player.start();
-					nextPlayer = createSmallPlayer();
-					if (nextPlayer != null)
-						nextPlayer.realize();
-				} catch (Exception ex) {
-					displayError(ex.toString());
-				}
-			}
-			else
-				Display.getDisplay(this).setCurrent(fileListControl);
-		}
+		if (event == PlayerListener.END_OF_MEDIA)
+			Display.getDisplay(this).setCurrent(fileListControl);
 		else if (event == PlayerListener.ERROR)
 			displayError((String) eventData);
 	}
